--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,7 +1,9 @@
 .header {
     background: rgba(5, 5, 5, 0.4);
-    padding: var(--space-1) var(--space-2);
+    padding: var(--space-2) var(--space-3);
     position: fixed;
+    top: 0;
+    width: 100%;
     z-index: 2;
 }
 
