--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,15 +1,11 @@
-.container {
-    position: relative;
-}
-
 .title {
     font-family: var(--font-bebas);
-    font-weight: bold;
+    font-weight: normal;
     font-size: 28px;
     line-height: 34px;
-    color: #F5F3F0;
+    color: #f5f3f0;
     max-width: 182px;
     position: absolute;
-    left: var(--space-2);
-    bottom: var(--space-2);
+    left: var(--space-3);
+    bottom: var(--space-3);
 }
