--- a/src/components/sections/home/most-accessed/most-accessed.module.scss
+++ b/src/components/sections/home/most-accessed/most-accessed.module.scss
@@ -1,6 +1,6 @@
 .mostAccessed {
     background-color: #f5f3f0;
-    padding: var(--space-3);
+    padding: var(--space-3) var(--space-3) var(--space-2);
 }
 
 .viewMore {
