--- a/src/components/scroll-container/scroll-container.module.scss
+++ b/src/components/scroll-container/scroll-container.module.scss
@@ -2,6 +2,8 @@
     display: flex;
     overflow-x: auto;
     padding: 0 var(--space-3) 0;
+    position: relative;
+    z-index: 1;
 
     &::-webkit-scrollbar {
         display: none;
