--- a/src/components/tag-link/tag-link.module.scss
+++ b/src/components/tag-link/tag-link.module.scss
@@ -1,7 +1,10 @@
 .tagLink {
-    font-size: 10px;
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
     color: var(--primary);
     border-radius: 20px;
-    padding: 4px 10px;
+    padding: 0 10px;
+    line-height: 22px;
     border: 1px solid var(--primary);
 }
