--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,8 @@
     --space-1: 8px;
     --space-2: 16px;
     --space-3: 32px;
+    --space-4: 40px;
+    --space-5: 48px;
 }
 
 * {
@@ -45,6 +47,36 @@ section {
 }
 
 button {
+    font-family: var(--font-nunito);
     background: none;
     border: none;
+}
+
+input {
+    color: #71717a;
+    font-size: 16px;
+    font-family: var(--font-nunito);
+    padding: var(--space-2) var(--space-3);
+    height: 48px;
+    border: 1px solid #e4e4e7;
+    border-radius: 30px;
+    background: none;
+    width: 100%;
+    outline: 0;
+    transition: border-color 0.2s ease;
+
+    &::placeholder {
+        font-family: var(--font-nunito);
+        opacity: 0.7;
+        color: #a1a1aa;
+    }
+
+    &:focus {
+        border: 1px solid #b69548;
+    }
+}
+
+::selection {
+    color: #fff;
+    background: #b69548;
 }
