--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -21,12 +21,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 60px;
+    height: var(--height-menu);
     flex: 1;
 
     // TODO - is active
     &:hover {
         color: #b69548;
+    }
+
+    &.isActive {
+        color: #b69548;
+
+        svg {
+            fill: #b69548;
+        }
     }
 }
 
