--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,10 +1,15 @@
 .header {
-    background: rgba(5, 5, 5, 0.4);
+    background-color: #fff;
     padding: var(--space-2) var(--space-3);
     position: absolute;
     top: 0;
     width: 100%;
+    height: var(--height-header);
     z-index: 2;
+
+    &.hasBackground {
+        background: rgba(5, 5, 5, 0.4);
+    }
 }
 
 .logo {
