--- a/src/components/tag-link/tag-link.module.scss
+++ b/src/components/tag-link/tag-link.module.scss
@@ -2,9 +2,9 @@
     font-size: 12px;
     font-weight: 600;
     text-align: center;
-    color: var(--primary);
+    color: var(--color-primary);
     border-radius: 20px;
     padding: 0 10px;
     line-height: 22px;
-    border: 1px solid var(--primary);
+    border: 1px solid var(--color-primary);
 }
