--- a/src/components/search-modal/search-modal.module.scss
+++ b/src/components/search-modal/search-modal.module.scss
@@ -1,5 +1,13 @@
+.closeButton {
+    position: absolute;
+    top: var(--space-3);
+    right: var(--space-3);
+    color: #b69548;
+}
+
 .logo {
     width: 104px;
+    margin-bottom: var(--space-3);
 }
 
 .searchModal {
@@ -7,40 +15,13 @@
     background-color: #fff;
     position: fixed;
     inset: 0;
-    transform: translateY(-100%);
-    transition: transform 0.2s ease;
+    transform: translateY(100%);
+    transition: transform 0.4s ease;
     will-change: transform;
     z-index: 9;
 
     &.isActive {
         transform: translateY(0);
-        transition: transform 0.2s ease;
-    }
-}
-
-.formGroup {
-    display: flex;
-    align-items: center;
-    position: relative;
-    margin: 32px 0;
-
-    input {
-        padding-left: var(--space-5);
-        box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1);
-        border-color: transparent;
-
-        &:focus {
-            border-color: #b69548;
-        }
-    }
-
-    &__icon {
-        position: absolute;
-        left: var(--space-2);
-        top: 0;
-        bottom: 0;
-        display: flex;
-        align-items: center;
     }
 }
 
@@ -60,7 +41,7 @@
 }
 
 .list {
-    padding-bottom: var(--space-2);
+    padding: var(--space-3) 0 var(--space-2);
     border-bottom: 1px solid #f4f4f5;
 }
 
@@ -69,11 +50,4 @@
     max-width: 110px;
     text-align: center;
     display: block;
-}
-
-.closeButton {
-    position: absolute;
-    top: var(--space-3);
-    right: var(--space-3);
-    color: #b69548;
 }
