--- a/src/components/music-details-modal/music-details-modal.module.scss
+++ b/src/components/music-details-modal/music-details-modal.module.scss
@@ -15,8 +15,7 @@
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff;
-    opacity: 0.8;
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 8;
 }
 
