--- a/src/components/sections/repertoire-list/repertoire-list.module.scss
+++ b/src/components/sections/repertoire-list/repertoire-list.module.scss
@@ -1,5 +1,5 @@
 .section {
-    padding: 0 var(--space-3) var(--space-3);
+    padding: 0 var(--space-3) var(--space-2);
 }
 
 .accordion {
@@ -70,6 +70,11 @@
     svg {
         fill: #b80505;
     }
+}
+
+.downloadButton {
+    margin: var(--space-1) 0 var(--space-2);
+    min-width: 70px;
 }
 
 @keyframes slideaway {
