--- a/src/components/tag-link/tag-link.module.scss
+++ b/src/components/tag-link/tag-link.module.scss
@@ -1,10 +1,13 @@
 .tagLink {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 600;
-    text-align: center;
     color: var(--color-primary);
     border-radius: 20px;
     padding: 0 10px;
     line-height: 22px;
     border: 1px solid var(--color-primary);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
 }
