--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,6 +1,7 @@
 .button {
     font-size: 16px;
     font-weight: bold;
+    color: #fff;
     background-color: var(--color-primary);
     padding: 0 var(--space-2);
     line-height: 48px;
