--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,11 @@
 :root {
     --font-bebas: "Bebas Neue", cursive;
     --font-nunito: "Nunito Sans", sans-serif;
-    --primary: #b69548;
+    --color-primary: #b69548;
+    --height-header: 62px;
+    --height-menu: 60px;
     --space-1: 8px;
+    --space-0: 24px;
     --space-2: 16px;
     --space-3: 32px;
     --space-4: 40px;
@@ -47,6 +50,7 @@ section {
 }
 
 button {
+    color: #b69548;
     font-family: var(--font-nunito);
     background: none;
     border: none;
@@ -79,4 +83,15 @@ input {
 ::selection {
     color: #fff;
     background: #b69548;
+}
+
+svg {
+    transition: transform 0.2s ease;
+}
+
+main {
+    padding: var(--height-header) 0 calc(var(--height-menu) + var(--space-5));
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
