--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -15,3 +15,11 @@
 .logo {
     width: 104px;
 }
+
+.hideMobile {
+    display: none;
+
+    @media (min-width: 800px) {
+        display: block;
+    }
+}
