--- a/src/components/toggle-button/toggle-button.module.scss
+++ b/src/components/toggle-button/toggle-button.module.scss
@@ -1,6 +1,14 @@
 .toggleButton {
     display: flex;
     align-items: center;
+
+    &.hasButtonSpacing {
+        gap: var(--space-2);
+
+        .button {
+            margin: 0;
+        }
+    }
 }
 
 .button {
