--- a/src/components/sections/repertoire-register/repertoire-register.module.scss
+++ b/src/components/sections/repertoire-register/repertoire-register.module.scss
@@ -41,11 +41,11 @@
     }
 }
 
-.containerMusic {
+.containerSong {
     margin: var(--space-2) 0;
 }
 
-.totalMusic {
+.totalSong {
     font-size: 12px;
     color: #b69548;
 }
