--- a/src/components/artist-card/artist-card.module.scss
+++ b/src/components/artist-card/artist-card.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .artistCard {
     border-radius: var(--space-1);
     overflow: hidden;
@@ -25,4 +27,10 @@
     bottom: var(--space-1);
     left: var(--space-1);
     z-index: 2;
+
+    @include mq("desktop") {
+        font-size: 20px;
+        bottom: var(--space-2);
+        left: var(--space-2);
+    }
 }
