--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .card {
     border-radius: 16px;
     overflow: hidden;
@@ -29,10 +31,18 @@
 
 .title {
     font-size: 14px;
+
+    @include mq("desktop") {
+        font-size: 20px;
+    }
 }
 
 .description {
     font-size: 12px;
+
+    @include mq("desktop") {
+        font-size: 16px;
+    }
 }
 
 .tag {
@@ -44,4 +54,8 @@
     position: absolute;
     right: var(--space-2);
     bottom: 0;
+
+    @include mq("desktop") {
+        font-size: 16px;
+    }
 }
