--- a/src/components/search-input/search-input.module.scss
+++ b/src/components/search-input/search-input.module.scss
@@ -2,11 +2,13 @@
     display: flex;
     align-items: center;
     position: relative;
+    width: 100%;
 
     input {
         padding-left: var(--space-5);
         box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.1);
         border-color: transparent;
+        background-color: #fff;
 
         &:focus {
             border-color: #b69548;
