--- a/src/components/sections/banner-musicas-para-missa/banner-musicas-para-missa.module.scss
+++ b/src/components/sections/banner-musicas-para-missa/banner-musicas-para-missa.module.scss
@@ -1,11 +1,25 @@
+@import "@styles/variables";
+
 .sectionBanner {
     padding: var(--space-3);
+
+    @include mq("desktop") {
+        padding: var(--space-4);
+    }
 }
 
 .container {
     color: #fff;
     position: absolute;
     padding: var(--space-2);
+
+    @include mq("desktop") {
+        padding: var(--space-4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
 
 .banner {
@@ -15,10 +29,19 @@
 
 .title {
     font-size: 18px;
+
+    @include mq("desktop") {
+        font-size: 32px;
+    }
 }
 
 .description {
     font-size: 12px;
     max-width: 192px;
     margin-top: var(--space-1);
+
+    @include mq("desktop") {
+        font-size: 28px;
+        max-width: 390px;
+    }
 }
