--- a/src/components/sections/highlights/highlights.module.scss
+++ b/src/components/sections/highlights/highlights.module.scss
@@ -1,7 +1,19 @@
+@import "@styles/variables";
+
 .highlights {
     padding-top: var(--space-3);
     margin-bottom: var(--space-3);
     display: flex;
     flex-direction: column;
     gap: var(--space-3);
+}
+
+.scrollContainer {
+    li {
+        max-width: 280px;
+
+        @include mq("desktop") {
+            max-width: 360px;
+        }
+    }
 }
