--- a/src/components/sections/most-accessed/most-accessed.module.scss
+++ b/src/components/sections/most-accessed/most-accessed.module.scss
@@ -1,10 +1,24 @@
+@import "@styles/variables";
+
 .mostAccessed {
     background-color: #f5f3f0;
     padding: var(--space-3) var(--space-3) var(--space-2);
+
+    @include mq("desktop") {
+        padding-bottom: var(--space-3);
+    }
 }
 
 .viewMore {
     position: absolute;
-    top: var(--space-3);
-    right: var(--space-3);
+    top: 0;
+    right: 0;
+}
+
+.grid {
+    @include mq("desktop") {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: var(--space-2) var(--space-1);
+    }
 }
