--- a/src/components/thumbnail/thumbnail.module.scss
+++ b/src/components/thumbnail/thumbnail.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .thumbnail {
     display: flex;
     align-items: center;
@@ -8,18 +10,30 @@
         border-radius: 50%;
         width: 40px;
         height: 40px;
+
+        @include mq("desktop") {
+            width: 60px;
+            height: 60px;
+        }
     }
 }
 
 .description {
     font-size: 12px;
     color: #52525b;
-    line-height: 1.2;
     display: flex;
     flex-direction: column;
+
+    @include mq("desktop") {
+        font-size: 16px;
+    }
 
     strong {
         font-size: 14px;
         color: #27272a;
+
+        @include mq("desktop") {
+            font-size: 20px;
+        }
     }
 }
