--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -16,6 +16,7 @@
     @include mq("desktop") {
         display: flex;
         align-items: center;
+        border-bottom: 1px solid #f4f4f5;
     }
 }
 
