--- a/src/styles/repertorio.module.scss
+++ b/src/styles/repertorio.module.scss
@@ -1,11 +1,29 @@
+@import "@styles/variables";
+
 .title {
     font-weight: 700;
     font-size: 18px;
     color: #3f3f46;
     margin-bottom: var(--space-3);
+
+    @include mq("desktop") {
+        font-size: 32px;
+    }
 }
 
 .section {
     padding: var(--space-3);
     margin-bottom: auto;
+
+    .button {
+        font-size: 14px;
+        line-height: 30px;
+        width: 190px;
+
+        @include mq("desktop") {
+            font-size: 20px;
+            width: 240px;
+            line-height: 48px;
+        }
+    }
 }
