--- a/src/components/toggle-button/toggle-button.module.scss
+++ b/src/components/toggle-button/toggle-button.module.scss
@@ -16,7 +16,7 @@
     color: #a1a1aa;
     border: 1px solid #f4f4f5;
     padding: 0 var(--space-2);
-    height: 26px;
+    height: var(--height-button-small);
     background-color: #fafafa;
     border-radius: 20px;
     transition: border-color 0.2s ease, color 0.2s ease;
