--- a/src/components/menu-desktop/menu-desktop.module.scss
+++ b/src/components/menu-desktop/menu-desktop.module.scss
@@ -16,7 +16,7 @@
         font-size: 16px;
         line-height: var(--height-header);
 
-        color: #fff;
+        color: #52525b;
         white-space: nowrap;
         padding: 0 var(--space-3);
 
@@ -26,6 +26,10 @@
 
         &:hover {
             color: #b69548;
+        }
+
+        &.textWhite {
+            color: #fff;
         }
     }
 
