--- a/src/components/radio-group/radio-group.module.scss
+++ b/src/components/radio-group/radio-group.module.scss
@@ -22,6 +22,11 @@
     display: block;
     padding: var(--space-1) var(--space-2);
     width: 100%;
+    transition: background 0.2s ease;
+
+    &:hover {
+        background-color: #f4f4f5;
+    }
 }
 
 // TODO - remover essa regra, depois que definir como vai vir os dados do back-end
@@ -38,7 +43,7 @@
     gap: 8px;
     background-color: #b69548;
     padding: 0 12px;
-    height: 26px;
+    height: var(--height-button-small);
     border-radius: 20px;
 
     span {
