--- a/src/components/subheader/subheader.module.scss
+++ b/src/components/subheader/subheader.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .subheader {
     display: flex;
     align-items: center;
@@ -14,6 +16,10 @@
         font-size: 12px;
         font-weight: 600;
         margin: 0 auto;
+    }
+
+    @include mq("desktop") {
+        display: none;
     }
 }
 
