--- a/src/components/toolbar/toolbar.module.scss
+++ b/src/components/toolbar/toolbar.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .toolbar {
     font-size: 12px;
     height: 40px;
@@ -21,5 +23,12 @@
 
     p {
         margin-right: auto;
+    }
+
+    @include mq("desktop") {
+        position: static;
+        box-shadow: none;
+        background-color: #fff;
+        margin: 0;
     }
 }
