--- a/src/styles/musica.module.scss
+++ b/src/styles/musica.module.scss
@@ -32,8 +32,10 @@
 }
 
 .main {
+    flex-direction: column-reverse;
+
     @include mq("desktop") {
-        flex-direction: row-reverse;
+        flex-direction: row;
         max-width: var(--width-container);
         margin: 0 auto;
     }
