--- a/src/components/page-title/page-title.module.scss
+++ b/src/components/page-title/page-title.module.scss
@@ -2,7 +2,7 @@
 
 .title {
     font-size: 18px;
-    color: #27272A;
+    color: #3F3F46;
     margin-bottom: var(--space-2);
 
     @include mq("desktop") {
