--- a/src/components/circle-button/circle-button.module.scss
+++ b/src/components/circle-button/circle-button.module.scss
@@ -1,5 +1,6 @@
+@import "@styles/variables";
+
 .button {
-    font-size: 12px;
     width: 24px;
     height: 24px;
     background-color: var(--color-primary);
@@ -9,6 +10,11 @@
     justify-content: center;
     border: 1px solid #b69548;
 
+    @include mq("desktop") {
+        width: 40px;
+        height: 40px;
+    }
+
     &:disabled {
         opacity: 0.6;
     }
@@ -17,6 +23,11 @@
         width: 16px;
         height: 16px;
         fill: #fff;
+
+        @include mq("desktop") {
+            width: 24px;
+            height: 24px;
+        }
     }
 
     &.white {
