--- a/src/components/sections/album/album.module.scss
+++ b/src/components/sections/album/album.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .section {
     padding: var(--space-3);
 }
@@ -5,11 +7,20 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 16px 8px;
+    gap: var(--space-2) var(--space-1);
+
+    @include mq("desktop") {
+        grid-template-columns: repeat(5, 1fr);
+        row-gap: var(--space-4);
+    }
 
     li {
         font-size: 10px;
         color: #71717a;
+
+        @include mq("desktop") {
+            font-size: 14px;
+        }
     }
 
     strong {
@@ -17,5 +28,9 @@
         color: #3f3f46;
         display: block;
         margin-top: 8px;
+
+        @include mq("desktop") {
+            font-size: 16px;
+        }
     }
 }
