--- a/src/components/sections/playlist/playlist.module.scss
+++ b/src/components/sections/playlist/playlist.module.scss
@@ -1,5 +1,7 @@
+@import "@styles/variables";
+
 .playlist {
-    padding: var(--space-3) var(--space-3) var(--space-2);
+    margin: var(--space-3) 0 var(--space-2);
 }
 
 .soung {
@@ -13,6 +15,10 @@
         font-size: 14px;
         color: #52525b;
         margin: 0 auto 0 0;
+
+        @include mq("desktop") {
+            font-size: 20px;
+        }
     }
 }
 
@@ -20,4 +26,9 @@
     border-radius: 4px;
     width: 24px;
     height: 24px;
+
+    @include mq("desktop") {
+        width: 54px;
+        height: 54px;
+    }
 }
