--- a/src/components/toggle-button/toggle-button.module.scss
+++ b/src/components/toggle-button/toggle-button.module.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables";
+
 .toggleButton {
     display: flex;
     align-items: center;
@@ -22,6 +24,11 @@
     transition: border-color 0.2s ease, color 0.2s ease;
     position: relative;
     z-index: 2;
+
+    @include mq("desktop") {
+        font-size: 14px;
+        padding: 0 var(--space-0);
+    }
 
     + .button {
         margin-left: calc(var(--space-1) * -1);
