--- a/src/styles/album.module.scss
+++ b/src/styles/album.module.scss
@@ -1,8 +1,14 @@
-.section {
-    padding: 0 var(--space-3);
+@import "@styles/variables";
+
+.container {
+    flex-direction: row;
     display: grid;
     grid-template-columns: 80px auto;
     gap: var(--space-0);
+
+    @include mq("desktop") {
+        grid-template-columns: 140px auto;
+    }
 }
 
 .title {
@@ -10,10 +16,21 @@
     margin-bottom: var(--space-2);
 }
 
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .detail {
     font-size: 12px;
     color: #3f3f46;
     display: flex;
+
+    @include mq("desktop") {
+        font-size: 16px;
+        margin-bottom: var(--space-1);
+    }
 
     span {
         display: inline-flex;
