--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -105,6 +105,7 @@ main {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin-top: var(--space-0);
 
     @include mq("desktop") {
         padding-bottom: 0;
