--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,7 @@
     --height-menu: 60px;
     --height-footer: 112px;
     --height-button-small: 26px;
+    --width-sidebar: 264px;
     --width-container: 1160px;
     --space-1: 8px;
     --space-0: 24px;
