--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -108,12 +108,13 @@ svg {
 
 main {
     padding-top: calc(var(--height-header) + var(--space-0));
+    padding-bottom: calc(var(--height-menu) + var(--space-5));
     min-height: calc(100vh - var(--height-footer));
     display: flex;
     flex-direction: column;
 
     @include mq("desktop") {
-        padding-bottom: 0;
+        padding-bottom: var(--space-5);
     }
 }
 
