--- a/src/components/artist-card/artist-card.module.scss
+++ b/src/components/artist-card/artist-card.module.scss
@@ -4,18 +4,47 @@
     border-radius: var(--space-1);
     overflow: hidden;
     display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    max-width: max-content;
     border-bottom: 2px solid #b69548;
+    min-height: 104px;
+
+    @include mq("tablet") {
+        min-height: 134px;
+    }
 
     &::after {
         content: "";
-        background: linear-gradient(180deg, rgba(5, 5, 5, 0) 37.67%, rgba(5, 5, 5, 0.7) 88.11%);
+        background: linear-gradient(180deg, rgba(5, 5, 5, 0) 0%, rgba(5, 5, 5, 0.48) 82.63%);
         position: absolute;
         inset: 0;
         width: 100%;
         height: 100%;
         z-index: 1;
+    }
+
+    img {
+        object-fit: cover;
+    }
+}
+
+.avatar {
+    background-color: #f5f3f0;
+
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url("../../../public/icons/user-icon.svg");
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-position: center center;
+    text-indent: -9999px;
+
+    @include mq("desktop") {
+        background-size: 40px;
     }
 }
 
