--- a/src/styles/artistas.module.scss
+++ b/src/styles/artistas.module.scss
@@ -2,12 +2,20 @@
 
 .content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: var(--space-2);
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--space-0) var(--space-2);
 
-    @include mq("desktop") {
+    @include mq("phone-small") {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include mq("phablet") {
+        grid-template-columns: repeat(4, 1fr);
+        gap: var(--space-4) var(--space-0);
+    }
+
+    @include mq("tablet-wide") {
         grid-template-columns: repeat(5, 1fr);
-        gap: var(--space-0);
     }
 }
 
