--- a/src/components/section/section.module.scss
+++ b/src/components/section/section.module.scss
@@ -1,3 +1,9 @@
+@import "@styles/variables";
+
 .section {
-    padding: 0 var(--space-3) 0;
+    padding: 0 var(--space-2) 0;
+
+    @include mq("phone-wide") {
+        padding: 0 var(--space-3) 0;
+    }
 }
