--- a/src/components/sections/album/album.module.scss
+++ b/src/components/sections/album/album.module.scss
@@ -7,7 +7,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: var(--space-0);
+    gap: var(--space-0) var(--space-2);
 
     @include mq("desktop") {
         grid-template-columns: repeat(5, 1fr);
