--- a/src/styles/album.module.scss
+++ b/src/styles/album.module.scss
@@ -9,6 +9,14 @@
     @include mq("desktop") {
         grid-template-columns: 140px auto;
     }
+
+    .albumImage {
+        min-height: 80px;
+
+        @include mq("desktop") {
+            min-height: 140px;
+        }
+    }
 }
 
 .title {
