--- a/src/components/sections/playlist/playlist.module.scss
+++ b/src/components/sections/playlist/playlist.module.scss
@@ -4,7 +4,7 @@
     margin: var(--space-3) 0 var(--space-2);
 }
 
-.soung {
+.song {
     display: flex;
     align-items: center;
     gap: var(--space-2);
