--- a/src/styles/musica.module.scss
+++ b/src/styles/musica.module.scss
@@ -2,6 +2,7 @@
 
 .title {
     font-size: 24px;
+    margin-bottom: var(--space-0);
 
     @include mq("desktop") {
         font-size: 32px;
@@ -15,7 +16,6 @@
 
         @include mq("desktop") {
             font-size: 20px;
-            margin-top: var(--space-1);
         }
     }
 }
