--- a/src/components/sections/artists/artists.module.scss
+++ b/src/components/sections/artists/artists.module.scss
@@ -31,7 +31,11 @@
 .viewMore {
     position: absolute;
     top: var(--space-3);
-    right: 0;
+    right: var(--space-3);
+
+    @include mq("desktop") {
+        right: 0;
+    }
 }
 
 .scrollContainer {
