--- a/src/components/sections/playlist/playlist.module.scss
+++ b/src/components/sections/playlist/playlist.module.scss
@@ -15,6 +15,7 @@
         font-size: 14px;
         color: #52525b;
         margin: 0 auto 0 0;
+        flex: 1;
 
         @include mq("desktop") {
             font-size: 20px;
