--- a/src/components/sections/repertoire-list/repertoire-list.module.scss
+++ b/src/components/sections/repertoire-list/repertoire-list.module.scss
@@ -1,7 +1,7 @@
 @import "@styles/variables";
 
 .section {
-    padding: 0 var(--space-3) var(--space-2);
+    padding-bottom: var(--space-2);
 }
 
 .accordion {
