--- a/src/components/sections/repertoire/repertoire.module.scss
+++ b/src/components/sections/repertoire/repertoire.module.scss
@@ -9,8 +9,11 @@
 }
 
 .title {
-    padding-top: var(--space-3);
-    padding-left: var(--space-3);
+    padding: var(--space-3) 0 0 var(--space-2);
+
+    @include mq("phone-wide") {
+        padding-left: var(--space-3);
+    }
 
     @include mq("desktop") {
         padding-left: 0;
@@ -20,7 +23,11 @@
 .viewMore {
     position: absolute;
     top: var(--space-3);
-    right: var(--space-3);
+    right: var(--space-2);
+
+    @include mq("phone-wide") {
+        right: var(--space-3);
+    }
 
     @include mq("desktop") {
         right: 0;
