--- a/src/components/sections/most-accessed/most-accessed.module.scss
+++ b/src/components/sections/most-accessed/most-accessed.module.scss
@@ -1,6 +1,6 @@
 @import "@styles/variables";
 
-.section {
+section.section {
     background-color: #f5f3f0;
     padding-top: var(--space-3);
     padding-bottom: var(--space-3);
