--- a/src/components/scroll-container/scroll-container.module.scss
+++ b/src/components/scroll-container/scroll-container.module.scss
@@ -11,6 +11,11 @@
         padding: 0 var(--space-3) 0;
     }
 
+    @include mq("desktop") {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
     &::-webkit-scrollbar {
         display: none;
     }
