--- a/src/components/sections/artists/artists.module.scss
+++ b/src/components/sections/artists/artists.module.scss
@@ -13,7 +13,7 @@
         height: 140px;
 
         @include mq("desktop") {
-            width: 240px;
+            width: 100%;
             height: 240px;
         }
     }
@@ -26,7 +26,6 @@
     @include mq("phone-wide") {
         padding-left: var(--space-3);
     }
-
 
     @include mq("desktop") {
         padding-left: 0;
@@ -47,12 +46,13 @@
     }
 }
 
-.scrollContainer {
+ul.scrollContainer {
     li {
         max-width: 140px;
 
         @include mq("desktop") {
-            max-width: 240px;
+            flex: 1;
+            max-width: inherit;
         }
     }
 }
