--- a/src/components/menu-desktop/menu-desktop.module.scss
+++ b/src/components/menu-desktop/menu-desktop.module.scss
@@ -38,6 +38,11 @@
             color: #fff;
         }
     }
+
+    .isActive {
+        font-weight: bold;
+        color: #b69548;
+    }
 }
 
 .nav {
