--- a/src/styles/artista.module.scss
+++ b/src/styles/artista.module.scss
@@ -11,6 +11,10 @@ $avatar-size: 80px;
     align-items: center;
     flex-direction: row;
     gap: var(--space-0);
+
+    @include mq("desktop") {
+        margin-bottom: var(--space-0);
+    }
 }
 
 .avatar {
@@ -20,7 +24,7 @@ $avatar-size: 80px;
     border-radius: 50%;
     position: relative;
     overflow: hidden;
-    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
 
     @include mq("desktop") {
         $avatar-size: 140px;
