--- a/src/components/page-title/page-title.module.scss
+++ b/src/components/page-title/page-title.module.scss
@@ -4,6 +4,7 @@
     font-size: 18px;
     color: #3F3F46;
     margin-bottom: var(--space-2);
+    grid-area: title;
 
     @include mq("desktop") {
         font-size: 32px;
