listagem de musicas mais acessadas

--- a/src/components/pagination/pagination.module.scss
+++ b/src/components/pagination/pagination.module.scss
@@ -25,7 +25,7 @@
 
 .page {
     line-height: 36px;
-    width: 36px;
+    padding: 0 8px;
     display: flex;
     align-items: center;
     justify-content: center;
