--- a/src/components/video/video.module.scss
+++ b/src/components/video/video.module.scss
@@ -81,7 +81,7 @@
         align-items: center;
         justify-content: center;
         gap: var(--space-1);
-        min-width: 160px;
+        flex: 1;
     }
 }
 
