--- a/src/components/toolbar/toolbar.module.scss
+++ b/src/components/toolbar/toolbar.module.scss
@@ -23,6 +23,10 @@
 
     p {
         margin-right: auto;
+
+        @include mq("desktop") {
+            margin-right: 12px;
+        }
     }
 
     @include mq("desktop") {
@@ -30,5 +34,39 @@
         box-shadow: none;
         background-color: #fff;
         margin: 0;
+        flex: 1 1;
+        width: auto;
+        padding: 0;
+        justify-content: center;
+        gap: 8px;
+    }
+}
+
+.button {
+    font-size: 12px;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-primary);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:disabled {
+        opacity: 0.6;
+    }
+
+    svg {
+        width: 16px;
+        height: 16px;
+        fill: #fff;
+    }
+
+    &.secondary {
+        background-color: #fff;
+
+        @include mq("desktop") {
+            background-color: #f5f3f0;
+        }
     }
 }
