--- a/src/styles/musica.module.scss
+++ b/src/styles/musica.module.scss
@@ -78,8 +78,10 @@ ul.chords {
 .border {
     @include mq("desktop") {
         position: relative;
-        padding: var(--space-3);
-        padding-bottom: 0;
+        padding: var(--space-3) var(--space-3) 0;
+        margin-top: var(--space-3);
+        display: flex;
+        gap: var(--space-2);
     }
 
     @include mq("desktop") {
