--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -71,6 +71,10 @@ button {
     background: none;
     border: none;
     cursor: pointer;
+
+    &:disabled {
+        cursor: auto;
+    }
 }
 
 input {
