--- a/src/styles/musica.module.scss
+++ b/src/styles/musica.module.scss
@@ -7,6 +7,7 @@
     @include mq("desktop") {
         font-size: 32px;
         margin-top: var(--space-0);
+        padding-right: var(--space-0);
     }
 
     strong {
