--- a/src/components/bottom-sheet/bottom-sheet.module.scss
+++ b/src/components/bottom-sheet/bottom-sheet.module.scss
@@ -1,18 +1,18 @@
+@import "@styles/variables";
+
 .overlay {
-    position: absolute;
+    position: fixed;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 4;
+    height: 100vh;
 }
 
 .bottomSheet {
     display: flex;
     flex-direction: column;
-    padding: var(--space-3);
-    background: #fff;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 24px 24px 0 0;
     width: 100%;
+    height: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -24,6 +24,22 @@
     &.isActive {
         transform: translateY(0);
         transition: transform 0.4s ease;
+    }
+}
+
+.container {
+    background: #fff;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 24px 24px 0 0;
+    padding: var(--space-3);
+
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+
+    @include mq("desktop") {
+        border-radius: 24px;
+        margin: auto;
     }
 }
 
