--- a/src/components/sections/repertoire-list/repertoire-list.module.scss
+++ b/src/components/sections/repertoire-list/repertoire-list.module.scss
@@ -91,6 +91,7 @@
     flex-direction: column;
     margin-right: auto;
     max-width: 70%;
+    flex: 1;
 
     @include mq("desktop") {
         font-size: 14px;
@@ -98,6 +99,9 @@
 
     strong {
         font-size: 14px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         @include mq("desktop") {
             font-size: 16px;
@@ -136,5 +140,26 @@
 
     to {
         opacity: 1;
+    }
+}
+
+.image {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    position: relative;
+    overflow: hidden;
+
+    @include mq("desktop") {
+        width: 60px;
+        height: 60px;
+    }
+
+    .avatarIcon {
+        background-size: 16px;
+
+        @include mq("desktop") {
+            background-size: 24px;
+        }
     }
 }
