--- a/src/components/sections/repertoire-register/repertoire-register.module.scss
+++ b/src/components/sections/repertoire-register/repertoire-register.module.scss
@@ -59,9 +59,22 @@
 
 .containerSong {
     margin: var(--space-2) 0;
+    overflow: auto;
+    height: 50vh;
 }
 
 .totalSong {
     font-size: 12px;
     color: #b69548;
+}
+
+.loading {
+    margin: 0 auto;
+    display: block;
+}
+
+.notFound {
+    font-size: 12px;
+    margin: var(--space-2) 0;
+    color: #71717a;
 }
