--- a/src/components/song-details-modal/song-details-modal.module.scss
+++ b/src/components/song-details-modal/song-details-modal.module.scss
@@ -41,11 +41,12 @@
 .title {
     font-size: 14px;
     margin-bottom: var(--space-2);
+    padding-right: var(--space-3);
 }
 
-.description {
+.artist {
     font-size: 12px;
-    line-height: 26px;
+    display: block;
 }
 
 @keyframes fadeIn {
@@ -55,4 +56,14 @@
     100% {
         opacity: 1;
     }
+}
+
+.containerCipher {
+    overflow: auto;
+    max-height: 80vh;
+}
+
+.loading {
+    margin: 0 auto;
+    display: block;
 }
