--- a/src/components/song-select/song-select.module.scss
+++ b/src/components/song-select/song-select.module.scss
@@ -1,8 +1,9 @@
+@import "@styles/variables";
 .songSelect {
     display: flex;
     align-items: center;
     gap: var(--space-2);
-    padding: var(--space-2);
+    padding: var(--space-2) 0;
     border-bottom: 1px solid #f4f4f5;
 }
 
@@ -12,9 +13,20 @@
     display: flex;
     flex-direction: column;
     margin-right: auto;
+    width: calc(100% - 80px);
+
+    @include mq("desktop") {
+        width: calc(100% - 110px);
+    }
 }
 
 .title {
     font-size: 14px;
     color: #27272a;
+}
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
