--- a/src/components/menu-mobile/menu-mobile.module.scss
+++ b/src/components/menu-mobile/menu-mobile.module.scss
@@ -43,6 +43,9 @@
         width: 50px;
         position: relative;
         top: -16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
